<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MapsActivity">

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@drawable/rounded_view"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin">

        <Button
            android:id="@+id/changeEndpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:onClick="changeEndpoint"
            android:text="@string/change_endpoint_url" />

        <Button
            android:id="@+id/sendCoordinatesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:onClick="sendCoordinates"
            android:text="@string/send_coordinates" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="logout"
            android:text="@string/logout" />
    </LinearLayout>

</RelativeLayout>