<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:orientation="horizontal"
        android:padding="@dimen/medium_margin">

        <EditText
            android:id="@+id/ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:hint="@string/ip_address"
            android:padding="8dp"
            android:inputType="text"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="0.2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/two_dots"/>

        <EditText
            android:id="@+id/port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:hint="@string/port"
            android:padding="8dp"
            android:inputType="number"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
</FrameLayout>